--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,19 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
+# Gems
+gems: [jekyll-paginate]
 
-# Site settings
+timezone: Europe/Berlin
+highlighter: pygments
+markdown: kramdown
+permalink: /post/:title
+paginate: 5
+paginate_path: '/blog/:num'
+excerpt_separator: "\n\n\n"
+
 title: Sollenne
 email: rich@sollenne.com
 description: > # ...
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "sollenne.github.io" # the base hostname & protocol for your site
+url: "http://www.sollenne.com" # the base hostname & protocol for your site
 twitter_username: richsollenne
 github_username:  sollenne
 
-# Build settings
-markdown: kramdown
