--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Gems
 gems: [jekyll-paginate]
 
-timezone: US/Central
+timezone: America/Chicago
 highlighter: rouge
 markdown: kramdown
 permalink: /post/:title
