--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   ],
   "dependencies": {
     "simple-jekyll-search": "~1.1.1",
-    "malihu-custom-scrollbar-plugin": "^3.1.3"
+    "malihu-custom-scrollbar-plugin": "^3.1.3",
+    "clipboard": "^1.5.12"
   }
 }
